# LogViewer

./: .gitignore
LogViewer/: CMakeLists.txt  console.cpp  console.h  date.cpp  main.cpp  structures.h  time.cpp  time.h  window.cpp  window.h
build-LogViewer-Desktop-Debug/: CMakeCache.txt  LogViewer  Makefile  cmake_install.cmake
build-LogViewer-Desktop-Debug/.cmake/api/v1/reply/: codemodel-v2-33de2aac2b5c02c0ada3.json  index-2023-11-19T14-01-21-0157.json  target-LogViewer-Debug-7b0915fefe5c0de77c26.json
build-LogViewer-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-34bd609edee018f5d9ab.json  cmakeFiles-v1-3fa10cb450dc6a4b3bb6.json  codemodel-v2-848fa1f0ad58c197e79b.json  directory-.-Debug-5f26202c2f125c364dca.json  index-2023-11-19T13-57-27-0609.json  target-LogViewer-Debug-9764577c69aa6d77cd13.json
build-LogViewer-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-LogViewer-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: console.cpp.7BC12345F43B2E18.idx  console.h.2F97A666D6B9B822.idx  curses.h.877870320DB62B32.idx  date.cpp.7734C9EE99BFF3CF.idx  date.h.226BE98AA38162D5.idx  main.cpp.309ABC2C7580E9D3.idx  ncurses_dll.h.559F7895101726C9.idx  structures.cpp.277A2F0381442870.idx  structures.h.CD6707D48ED6ABE0.idx  time.cpp.4B120257B94F2306.idx  (+6 more)
include/: StatusBar.h  WindowBase.h  console.h  date.h  menu.h  menubar.h  menuex.h  statusbar.h  structures.h  submenu.h  window.h  windowbase.h
src/: StatusBar.cpp  WindowBase.cpp  console.cpp  date.cpp  main.cpp  menu.cpp  menubar.cpp  menuex.cpp  statusbar.cpp  submenu.cpp  window.cpp  windowbase.cpp
